@@ -1,3 +1,6 @@
+11/05/2010
+- bugfix  make sure that the cache resource is loaded in all conditions when template methods getCached... are called externally
+
 10/05/2010
 - bugfix on {foreach} and {for} optimizations of 27/04/2010 
 
